--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
+    "googleapis": "^155.0.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
